Port runtime code to Forge 1.20.1